--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -5,39 +5,55 @@
 <section class="flex justify-center">
   <ul class="flex items-start gap-20">
     <li class="flex w-[250px] flex-col items-center justify-center gap-8">
-      <h4
-        class="flex w-full justify-center rounded-full border-4 border-black bg-indigo-400 py-4 text-xl font-bold"
+      <div
+        class="h-full rounded-xl border-[3px] border-black bg-white p-0 shadow-[8px_8px_0px_rgba(0,0,0,1)]"
       >
-        API GoogleMaps
-      </h4>
-      <p class="text-xl">
-        Integración con la API de Google Maps, el mapa puede abrirse en la
-        applicación movil facilitando su uso cuando se usa vehiculos y se tiene
-        un celular.
-      </p>
+        <h4
+          class="flex h-full w-full justify-center rounded-t-lg border-black bg-indigo-400 py-4 text-lg font-bold"
+        >
+          API GoogleMaps
+        </h4>
+        <p class="p-4">
+          Integración con la API de Google Maps, el mapa puede abrirse en la
+          applicación movil facilitando su uso cuando se usa vehiculos y se
+          tiene un celular.
+        </p>
+      </div>
     </li>
-    <li class="flex w-[250px] flex-col items-center justify-center gap-8">
-      <h4
-        class="flex w-full justify-center rounded-full border-4 border-black bg-rose-400 py-4 text-xl font-bold"
+    <li
+      class="flex h-full w-[250px] flex-col items-center justify-center gap-8"
+    >
+      <div
+        class="h-full rounded-xl border-[3px] border-black bg-white p-0 shadow-[8px_8px_0px_rgba(0,0,0,1)]"
       >
-        Foto de tu casa
-      </h4>
-      <p class="text-xl">
-        Crea una imagen que muestre tu casa para que la tengan de referencia,
-        evita describir tu casa cada vez que te llamen además de mostrarla en un
-        mapa.
-      </p>
+        <h4
+          class="flex w-full justify-center rounded-t-lg border-black bg-rose-400 py-4 text-lg font-bold"
+        >
+          Foto de tu casa
+        </h4>
+        <p class="p-4">
+          Crea una imagen que muestre tu casa para que la tengan de referencia,
+          evita describir tu casa cada vez que te llamen además de mostrarla en
+          un mapa.
+        </p>
+      </div>
     </li>
-    <li class="flex w-[250px] flex-col items-center justify-center gap-8">
-      <h4
-        class="flex w-full justify-center rounded-full border-4 border-black bg-emerald-400 px-10 py-4 text-xl font-bold"
+    <li
+      class="container h-full w-[250px] flex-col items-center justify-center gap-8"
+    >
+      <div
+        class="h-full rounded-xl border-[3px] border-black bg-white p-0 shadow-[8px_8px_0px_rgba(0,0,0,1)]"
       >
-        Mensaje
-      </h4>
-      <p class="text-xl">
-        Coloca un mensaje, titulo, referencia, identiticador, emoticonos para
-        que tu mapa sea unico 🎉🎈🎉.
-      </p>
+        <h4
+          class="flex justify-center rounded-t-lg border-black bg-emerald-400 py-4 text-lg font-bold"
+        >
+          Mensaje
+        </h4>
+        <p class="p-4">
+          Coloca un mensaje, titulo, referencia, identiticador, emoticonos para
+          que tu mapa sea unico 🎉🎈🎉.
+        </p>
+      </div>
     </li>
   </ul>
 </section>
