--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from "../components/Card.astro";
 import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
-import Canvas from "../components/Canvas.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="DoggyDomMap [Alfa]">
@@ -12,8 +12,8 @@ import Canvas from "../components/Canvas.astro";
   <main class="flex flex-col gap-20 px-10">
     <Hero />
     <Features />
-    <Canvas />
   </main>
+  <Footer />
 </Layout>
 
 <style></style>
