--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,24 +4,24 @@ import { Image } from "astro:assets";
 import HeroDog from "../images/doghero.jpeg";
 ---
 
-<section class="flex items-center justify-center gap-10">
+<section class="mt-10 flex items-center justify-center gap-10">
   <div class="flex w-[500px] flex-col items-center gap-8">
-    <h1 class="text-left text-6xl font-bold text-orange-500">
-      Envia tu ubicación de una forma comoda! 🗺️🐶
+    <h1 class="text-left text-7xl font-bold text-orange-500">
+      Envia tu ubicación de una forma comoda!
     </h1>
-    <p class="text-xl">
+    <p class="text-lg">
       Crea un mapa de tu casa para que te encuentre de forma sencilla los
       servicios de delivery.
     </p>
     <button
-      class="w-fit rounded-full border-2 border-b-8 border-r-8 border-black bg-white px-20 py-4 text-xl font-bold transition
+      class="w-fit border-[3px] border-black bg-white px-20 py-4 text-lg font-bold shadow-[8px_8px_0px_rgba(0,0,0,1)] transition
       duration-300 ease-in-out hover:translate-y-1
      hover:bg-blue-400"
-      >Crear mapa 👍</button
+      >Crear mapa 🗺️🐶👍</button
     >
   </div>
   <Image
-    class="h-[500px] w-[500px] animate-bounce rounded-3xl border-4 border-b-[12px] border-r-[12px] border-black shadow-sm"
+    class="h-[500px] w-[500px] animate-bounce rounded-3xl border-4 border-black shadow-[8px_8px_0px_rgba(0,0,0,1)] shadow-sm"
     src={HeroDog}
     alt="Un perro mostrando un mapa"
   />
