--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,13 +3,22 @@
 ---
 
 <head class="mx-[100px] flex">
-  <nav class="items-centers flex justify-between p-6">
+  <nav
+    class="items-centers sticky top-0 z-10 flex justify-between border-b-2 border-black bg-[#f9f0e0] p-6"
+  >
     <div class="text-2xl font-bold text-orange-500">DoggyDomMap</div>
     <ul class="flex items-center justify-center gap-8 text-lg">
-      <li><a class="text-xl font-bold">Home</a></li>
-      <li><a class="text-xl font-bold">Links</a></li>
+      <li>
+        <a class="font-bold underline underline-offset-8" href="/">Home</a>
+      </li>
+      <li>
+        <a
+          class="font-bold hover:underline hover:underline-offset-8"
+          href="/draw">Draw</a
+        >
+      </li>
     </ul>
 
-    <div class="flex text-lg">Menu</div>
+    <div class="flex text-lg"></div>
   </nav>
 </head>
