--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -13,7 +13,7 @@
         >
           API GoogleMaps
         </h4>
-        <p class="p-4">
+        <p class="p-4 opacity-80">
           Integración con la API de Google Maps, el mapa puede abrirse en la
           applicación movil facilitando su uso cuando se usa vehiculos y se
           tiene un celular.
@@ -31,7 +31,7 @@
         >
           Foto de tu casa
         </h4>
-        <p class="p-4">
+        <p class="p-4 opacity-80">
           Crea una imagen que muestre tu casa para que la tengan de referencia,
           evita describir tu casa cada vez que te llamen además de mostrarla en
           un mapa.
@@ -49,7 +49,7 @@
         >
           Mensaje
         </h4>
-        <p class="p-4">
+        <p class="p-4 opacity-80">
           Coloca un mensaje, titulo, referencia, identiticador, emoticonos para
           que tu mapa sea unico 🎉🎈🎉.
         </p>
