--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,8 @@
 <footer class="mt-10 flex justify-around bg-zinc-900 py-8 text-lg text-white">
-  <a href="#" id="toTop" class="underline">Volver arriba</a>
-  <div>Creado por : <a class="italic underline" href="">mcuyaca</a></div>
+  <a href="#" id="toTop" class="underline underline-offset-4">Volver arriba</a>
+  <div>
+    Creado por : <a class="underline underline-offset-4" href="">mcuyaca</a>
+  </div>
 </footer>
 
 <script>
