--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,16 +4,21 @@
 
 <head class="mx-[100px] flex">
   <nav
-    class="items-centers sticky top-0 z-10 flex justify-between border-b-2 border-black bg-[#f9f0e0] p-6"
+    class="items-centers sticky top-0 z-10 flex justify-between bg-[#f9f0e0] p-6 shadow-sm shadow-black"
   >
-    <div class="text-2xl font-bold text-orange-500">DoggyDomMap</div>
+    <div class="text-2xl font-extrabold text-orange-500">
+      Doggy<span class="text-red-600">Dom</span>Map
+    </div>
     <ul class="flex items-center justify-center gap-8 text-lg">
       <li>
-        <a class="font-bold underline underline-offset-8" href="/">Home</a>
+        <a
+          class="text-2xl font-semibold hover:underline hover:underline-offset-8"
+          href="/">Home</a
+        >
       </li>
       <li>
         <a
-          class="font-bold hover:underline hover:underline-offset-8"
+          class="text-2xl font-semibold hover:underline hover:underline-offset-8"
           href="/draw">Draw</a
         >
       </li>
