--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "@fontsource-variable/onest";
 interface Props {
   title: string;
 }
@@ -21,22 +22,10 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
-  @import url("https://rsms.me/inter/inter.css");
   :root {
   }
   html {
     background-size: 224px;
     background-color: #f9f0e0;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
   }
 </style>
