Change content and draft email sign

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -11,12 +11,12 @@
         <h4
           class="flex h-full w-full justify-center rounded-t-lg border-black bg-indigo-400 py-4 text-lg font-bold"
         >
-          API GoogleMaps
+          Fácil de usar
         </h4>
         <p class="p-4 opacity-80">
-          Integración con la API de Google Maps, el mapa puede abrirse en la
-          applicación movil facilitando su uso cuando se usa vehiculos y se
-          tiene un celular.
+          Esta aplicación intuitiva te permite cargar una imagen de tu casa,
+          completar fácilmente los campos con tus preferencias y descarga tu
+          diseño. Sin pasos complicados!
         </p>
       </div>
     </li>
@@ -29,12 +29,12 @@
         <h4
           class="flex w-full justify-center rounded-t-lg border-black bg-rose-400 py-4 text-lg font-bold"
         >
-          Foto de tu casa
+          Añade tu casa
         </h4>
         <p class="p-4 opacity-80">
           Crea una imagen que muestre tu casa para que la tengan de referencia,
-          evita describir tu casa cada vez que te llamen además de mostrarla en
-          un mapa.
+          evita describir tu casa cada vez que te llamen, muestra todas las
+          peculiaridades con una foto.
         </p>
       </div>
     </li>
@@ -47,7 +47,7 @@
         <h4
           class="flex justify-center rounded-t-lg border-black bg-emerald-400 py-4 text-lg font-bold"
         >
-          Mensaje
+          Mensajes divertidos
         </h4>
         <p class="p-4 opacity-80">
           Coloca un mensaje, titulo, referencia, identiticador, emoticonos para
