--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,13 +14,13 @@ import HeroDog from "../images/doghero.jpeg";
       >
     </h1>
     <p class="text-lg font-medium opacity-80">
-      Crea un mapa de tu casa para que te encuentre de forma sencilla los
-      servicios de delivery.
+      Crea un imagen y añade datos de tu casa para que te encuentre de forma
+      sencilla los servicios de delivery.
     </p>
     <button
       class="w-fit animate-bounce border-[3px] border-black bg-orange-400 px-20 py-4 text-lg font-bold shadow-[8px_8px_0px_rgba(0,0,0,1)]
      hover:bg-orange-300"
-      >Crear mapa 🗺️🐶👍</button
+      ><a href="/draw">Crear mapa 🗺️🐶👍</a></button
     >
   </div>
   <Image
