--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@
     class="items-centers sticky top-0 z-10 flex justify-between bg-[#f9f0e0] p-6 shadow-sm shadow-black"
   >
     <div class="text-2xl font-extrabold text-orange-500">
-      Doggy<span class="text-red-600">Dom</span>Map
+      Doggy<span class="text-red-600">Dom</span>Drawer
     </div>
     <ul class="flex items-center justify-center gap-8 text-lg">
       <li>
