--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -1,15 +1,21 @@
 ---
 import InputText from "./elements/InputText.astro";
+import img1 from "../images/example1.jpg";
+import img2 from "../images/example2.jpg";
+import { Image } from "astro:assets";
 ---
 
 <section class="flex w-full flex-col items-center justify-center gap-8">
-  <h3 class="text-3xl font-bold">Comienaza a dibujar</h3>
+  <h1 class="text-3xl font-bold">Comienza a dibujar</h1>
 
-  <div class="flex gap-[90px]">
+  <div class="flex items-center justify-center gap-[90px]">
     <div class="grid w-full gap-8">
       <div class="flex w-full flex-col gap-3">
+        <h2 class="text-xl font-bold text-red-600">
+          PASO 1: Completa los campos
+        </h2>
         <InputText
-          label="Titulo:"
+          label="Título:"
           placeholder="Ingresar el nuevo texto"
           id="textoInput"
         />
@@ -19,13 +25,13 @@ import InputText from "./elements/InputText.astro";
           id="textoInput1"
         />
         <InputText
-          label="Distrito:"
+          label="Distrito, Ciudad:"
           placeholder="Ingresar el nuevo texto"
           id="textoInput2"
         />
 
         <InputText
-          label="Ciudad:"
+          label="Mensaje:"
           placeholder="Ingresar el nuevo texto"
           id="textoInput3"
         />
@@ -37,12 +43,17 @@ import InputText from "./elements/InputText.astro";
       </div>
 
       <div class="flex flex-col gap-4">
+        <h2 class="text-xl font-bold text-red-600">PASO 2: Sube una imagen</h2>
+
         <input
           class="border-2 border-black bg-white p-2.5 px-4 py-2 shadow-[4px_4px_0px_rgba(0,0,0,1)] file:rounded file:border-0 file:bg-slate-300 file:font-bold focus:bg-rose-300 focus:outline-none"
           type="file"
           id="subirArchivo"
           accept="image/*"
         />
+        <h2 class="mt-2 text-xl font-bold text-red-600">
+          PASO 3: Descarga el resultado !
+        </h2>
         <button
           class="mt-3 border-2 border-black bg-slate-300 px-4 py-2 font-bold shadow-[4px_4px_0px_rgba(0,0,0,1)] focus:bg-rose-300 focus:outline-none"
           id="descargarBoton">Descargar Imagen</button
@@ -50,18 +61,38 @@ import InputText from "./elements/InputText.astro";
       </div>
     </div>
 
-    <canvas class="bg-white" id="miCanvas" width="450" height='600"'></canvas>
+    <canvas
+      class="flex h-[600px] w-[450px] flex-col items-center justify-center bg-white"
+      id="miCanvas"
+      width="450"
+      height='600"'></canvas>
   </div>
 </section>
 
+<section class="flex flex-col items-center gap-8">
+  <h1 class="text-3xl font-bold">Ejemplos</h1>
+  <div class="flex gap-8">
+    <Image
+      class="h-[600px] w-[450px]"
+      src={img1}
+      alt="Referencia del Museo Larco"
+    />
+
+    <Image
+      class="h-[600px] w-[450px]"
+      src={img2}
+      alt="Referencia de Plaza San Miguel"
+    />
+  </div>
+</section>
 <style></style>
 
 <script is:inline>
   function DibujoInicial(ctx, imagen) {
-    let tituloEnCanvas = textoInput.value || "Casa de Manuel";
-    let direccionEnCanvas = textoInput1.value || "Dirección: ";
-    let distritoEnCanvas = textoInput2.value || "Distrito: ";
-    let ciudadEnCanvas = textoInput3.value || "Ciudad: ";
+    let tituloEnCanvas = textoInput.value || "Título de la foto";
+    let direccionEnCanvas = textoInput1.value || "Dirección ";
+    let distritoEnCanvas = textoInput2.value || "Distrito, Ciudad ";
+    let ciudadEnCanvas = textoInput3.value || "Mensaje ";
 
     ctx.fillStyle = "white";
     ctx.fillRect(0, 0, 450, 600);
