--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,10 @@
 <footer class="mt-10 flex justify-around bg-zinc-900 py-8 text-lg text-white">
   <a href="#" id="toTop" class="underline underline-offset-4">Volver arriba</a>
   <div>
-    Creado por : <a class="underline underline-offset-4" href="">mcuyaca</a>
+    Creado por : <a
+      class="underline underline-offset-4"
+      href="https://github.com/mcuyaca/DoggyDomMap/">mcuyaca</a
+    >
   </div>
 </footer>
 
