--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,22 +4,22 @@
 
 <head class="mx-[100px] flex">
   <nav
-    class="items-centers sticky top-0 z-10 flex justify-between bg-[#f9f0e0] p-6 shadow-sm shadow-black"
+    class="items-centers sticky top-0 z-10 flex justify-between bg-[#f9f0e0] p-6 text-2xl shadow-sm shadow-black"
   >
-    <div class="text-2xl font-extrabold text-orange-500">
+    <a class="font-extrabold text-orange-500" href="/">
       Doggy<span class="text-red-600">Dom</span>Drawer
-    </div>
+    </a>
     <ul class="flex items-center justify-center gap-8 text-lg">
       <li>
         <a
-          class="text-2xl font-semibold hover:underline hover:underline-offset-8"
-          href="/">Home</a
+          class="font-semibold hover:underline hover:underline-offset-8"
+          href="/draw">Maps</a
         >
       </li>
       <li>
         <a
-          class="text-2xl font-semibold hover:underline hover:underline-offset-8"
-          href="/draw">Draw</a
+          class="font-semibold hover:underline hover:underline-offset-8"
+          href="/email">Signature</a
         >
       </li>
     </ul>
