--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Features from "../components/Features.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="DoggyDomMap [Alfa]">
+<Layout title="DoggyDomDrawer">
   <Navbar />
   <main class="flex flex-col gap-20 px-10">
     <Hero />
