--- a/src/components/CanvasSignature.astro
+++ b/src/components/CanvasSignature.astro
@@ -1,24 +1,51 @@
 ---
 import InputText from "./elements/InputText.astro";
-import svgBuilding from "./icons/Building.astro";
+import example1 from "../images/example3.jpg";
+import example2 from "../images/example4.jpg";
+import { Image } from "astro:assets";
 ---
 
 <section class="flex w-full flex-col items-center justify-center gap-8">
   <h3 class="text-3xl font-bold">Comienaza a dibujar</h3>
 
-  <div class="flex gap-[90px]">
+  <div class="flex flex-col items-center justify-center gap-[90px] md:flex-row">
     <div class="grid w-full gap-8">
       <div class="flex w-full flex-col gap-3">
+        <h2 class="text-xl font-bold text-red-600">
+          PASO 1: Completa los campos
+        </h2>
         <InputText
-          label="Titulo:"
+          label="Nombre y Apellidos:"
           placeholder="Ingresar el nuevo texto"
           id="textoInput"
         />
+        <InputText
+          label="Rol:"
+          placeholder="Ingresar el nuevo texto"
+          id="textoInput1"
+        />
 
         <InputText
-          label="Ciudad:"
+          label="Dirección"
+          placeholder="Ingresar el nuevo texto"
+          id="textoInput2"
+        />
+        <InputText
+          label="Teléfono"
           placeholder="Ingresar el nuevo texto"
           id="textoInput3"
+        />
+
+        <InputText
+          label="Correo:"
+          placeholder="Ingresar el nuevo texto"
+          id="textoInput4"
+        />
+
+        <InputText
+          label="Web:"
+          placeholder="Ingresar el nuevo texto"
+          id="textoInput5"
         />
 
         <button
@@ -28,12 +55,19 @@ import svgBuilding from "./icons/Building.astro";
       </div>
 
       <div class="flex flex-col gap-4">
+        <h2 class="mt-2 text-xl font-bold text-red-600">
+          PASO 2: Sube una imagen
+        </h2>
+
         <input
           class="border-2 border-black bg-white p-2.5 px-4 py-2 shadow-[4px_4px_0px_rgba(0,0,0,1)] file:rounded file:border-0 file:bg-slate-300 file:font-bold focus:bg-rose-300 focus:outline-none"
           type="file"
           id="subirArchivo"
           accept="image/*"
         />
+        <h2 class="mt-2 text-xl font-bold text-red-600">
+          PASO 3: Descarga el resultado !
+        </h2>
         <button
           class="mt-3 border-2 border-black bg-slate-300 px-4 py-2 font-bold shadow-[4px_4px_0px_rgba(0,0,0,1)] focus:bg-rose-300 focus:outline-none"
           id="descargarBoton">Descargar Imagen</button
@@ -41,17 +75,67 @@ import svgBuilding from "./icons/Building.astro";
       </div>
     </div>
 
-    <canvas class="h-fit w-fit bg-white" id="miCanvas" width="450" height='180"'
-    ></canvas>
+    <canvas
+      class="h-[200px] w-[450px] bg-white"
+      id="miCanvas"
+      width="450"
+      height='200"'></canvas>
   </div>
+
+  <section class="flex flex-col items-center gap-8">
+    <h1 class="text-3xl font-bold">Ejemplos</h1>
+    <div class="flex flex-col gap-8 md:flex-row">
+      <Image
+        class="h-[200px] w-[450px]"
+        src={example1}
+        alt="Ejemplo de firma de correo de Pelusa"
+      />
+
+      <Image
+        class="h-[200px] w-[450px]"
+        src={example2}
+        alt="Ejemplo de firma de correo de Manuel"
+      />
+    </div>
+  </section>
 </section>
-
-<style></style>
-
 <script is:inline>
-  function DibujoInicial(ctx) {
-    // Dibuja el SVG
-    // Tu SVG como cadena
+  function DibujoInicial(ctx, imagen) {
+    let name = textoInput.value || "Nombre Apellidos";
+    let position = textoInput1.value || "Rol en la empresa ";
+    let address = textoInput2.value || "Distrito, Ciudad ";
+    let phone = textoInput3.value || "+51 123 456 789 ";
+    let email = textoInput4.value || "mail@tusitio.com ";
+    let web = textoInput5.value || "www.tusitio.com ";
+
+    let colorSvg = "#1d4ed8";
+
+    const svgMail = `<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+	<path fill="${colorSvg}" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7l8-5V6l-8 5l-8-5v2z" />
+</svg>`;
+
+    const svgUser = `<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+	<path fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M5 20v-1a7 7 0 0 1 7-7v0a7 7 0 0 1 7 7v1m-7-8a4 4 0 1 0 0-8a4 4 0 0 0 0 8" />
+</svg>`;
+
+    const svgCase = `<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20">
+	<path fill="black" d="M14 5h2v14H4V5h2V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2zm3 0h1a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1zM3 5v14H2a2 2 0 0 1-2-2V7c0-1.1.9-2 2-2zm5-1v1h4V4z" />
+</svg>`;
+
+    const svgAddress = `<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+	<path fill="${colorSvg}" d="M12 11.5A2.5 2.5 0 0 1 9.5 9A2.5 2.5 0 0 1 12 6.5A2.5 2.5 0 0 1 14.5 9a2.5 2.5 0 0 1-2.5 2.5M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7" />
+</svg>`;
+
+    const svgPhone = `<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+	<path fill="${colorSvg}" d="m16.556 12.906l-.455.453s-1.083 1.076-4.038-1.862s-1.872-4.014-1.872-4.014l.286-.286c.707-.702.774-1.83.157-2.654L9.374 2.86C8.61 1.84 7.135 1.705 6.26 2.575l-1.57 1.56c-.433.432-.723.99-.688 1.61c.09 1.587.808 5 4.812 8.982c4.247 4.222 8.232 4.39 9.861 4.238c.516-.048.964-.31 1.325-.67l1.42-1.412c.96-.953.69-2.588-.538-3.255l-1.91-1.039c-.806-.437-1.787-.309-2.417.317" />
+</svg>`;
+
+    const svgWeb = `<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 14 14">
+	<g fill="none" stroke="${colorSvg}" stroke-linecap="round" stroke-linejoin="round">
+		<path d="M7 13.5a6.5 6.5 0 1 0 0-13a6.5 6.5 0 0 0 0 13M.5 7h13" />
+		<path d="M9.5 7A11.22 11.22 0 0 1 7 13.5A11.22 11.22 0 0 1 4.5 7A11.22 11.22 0 0 1 7 .5A11.22 11.22 0 0 1 9.5 7" />
+	</g>
+</svg>`;
 
     let svgString = `<svg
   xmlns="http://www.w3.org/2000/svg"
@@ -70,24 +154,56 @@ import svgBuilding from "./icons/Building.astro";
 >
 `;
 
+    ctx.fillStyle = "white";
+    ctx.fillRect(0, 0, 450, 200);
+
+    const noImagen = () => {
+      ctx.fillStyle = "#CBD5E1";
+      ctx.fillRect(20, 20, 160, 160);
+    };
+    imagen ? ctx.drawImage(imagen, 20, 20, 160, 160) : noImagen();
+
     const img = new Image();
-    img.src = "data:image/svg+xml;base64," + btoa(svgString);
+    img.src = "data:image/svg+xml;base64," + btoa(svgUser);
+
+    const positionIcon = new Image();
+    positionIcon.src = "data:image/svg+xml;base64," + btoa(svgCase);
+    const emailIcon = new Image();
+
+    emailIcon.src = "data:image/svg+xml;base64," + btoa(svgMail);
+
+    const addressIcon = new Image();
+    addressIcon.src = "data:image/svg+xml;base64," + btoa(svgAddress);
+
+    const phoneIcon = new Image();
+    phoneIcon.src = "data:image/svg+xml;base64," + btoa(svgPhone);
+
+    const webIcon = new Image();
+    webIcon.src = "data:image/svg+xml;base64," + btoa(svgWeb);
 
     img.onload = function () {
-      ctx.drawImage(img, 190, 12, 20, 20);
-      ctx.drawImage(img, 190, 37, 20, 20);
-      ctx.drawImage(img, 190, 63, 20, 20);
-      ctx.drawImage(img, 190, 87, 20, 20);
-      ctx.drawImage(img, 190, 114, 20, 20);
+      //ctx.drawImage(img, 190, 22, 20, 20);
+      //ctx.drawImage(positionIcon, 190, 47, 20, 20);
+      ctx.drawImage(addressIcon, 190, 83, 20, 20);
+      ctx.drawImage(phoneIcon, 190, 108, 20, 20);
+      ctx.drawImage(emailIcon, 190, 133, 20, 20);
+      ctx.drawImage(webIcon, 190, 158, 20, 20);
     };
-    // Dibuja el texto blanco
-    ctx.font = "600 14px Onest Variable";
+
+    ctx.font = "bold 20px Onest Variable";
     ctx.fillStyle = "black";
-    ctx.fillText("Nombre apellido", 220, 30);
-    ctx.fillText("Cargo", 220, 55);
-    ctx.fillText("Av. Dirección", 220, 80);
-    ctx.fillText("Teléfono: +123 456 789", 220, 105);
-    ctx.fillText("www.tusitio.com", 220, 130);
+    ctx.fillText(name, 190, 40);
+
+    ctx.rect(190, 75, 220, 2);
+    ctx.fill();
+
+    ctx.font = "400 15px Onest Variable";
+    ctx.fillStyle = "black";
+    ctx.fillText(position, 190, 65);
+    ctx.fillText(address, 217, 100);
+    ctx.fillText(phone, 217, 125);
+    ctx.fillText(email, 217, 150);
+    ctx.fillText(web, 217, 175);
   }
 
   document.addEventListener("DOMContentLoaded", () => {
@@ -123,7 +239,7 @@ import svgBuilding from "./icons/Building.astro";
     });
 
     descargarBoton.addEventListener("click", () => {
-      const dataURL = canvas.toDataURL("image/jpg");
+      const dataURL = canvas.toDataURL("image/jpg", 1);
       const enlaceDescarga = document.createElement("a");
       enlaceDescarga.href = dataURL;
       enlaceDescarga.download = "mi_mapa.jpg";
@@ -131,4 +247,3 @@ import svgBuilding from "./icons/Building.astro";
     });
   });
 </script>
- ../../public/Icons.ts
