--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -3,13 +3,15 @@
 ---
 
 <section class="flex justify-center">
-  <ul class="flex items-start gap-20">
-    <li class="flex w-[250px] flex-col items-center justify-center gap-8">
+  <ul class="flex flex-col items-start gap-20 md:flex-row">
+    <li
+      class="flex h-full w-[250px] flex-col items-center justify-center gap-8"
+    >
       <div
         class="h-full rounded-xl border-[3px] border-black bg-white p-0 shadow-[8px_8px_0px_rgba(0,0,0,1)]"
       >
         <h4
-          class="flex h-full w-full justify-center rounded-t-lg border-black bg-indigo-400 py-4 text-lg font-bold"
+          class="flex w-full justify-center rounded-t-lg border-black bg-indigo-400 py-4 text-lg font-bold"
         >
           Fácil de usar
         </h4>
