--- a/src/pages/draw.astro
+++ b/src/pages/draw.astro
@@ -5,12 +5,12 @@ import Navbar from "../components/Navbar.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="DoggyDomMap [Alfa]">
+<Layout title="DoggyDomDrawer">
   <main class="flex flex-col">
     <Navbar />
-    <main class="mt-7 flex flex-col gap-20">
+    <div class="mt-7 flex flex-col gap-20">
       <Canvas />
-    </main>
+    </div>
     <Footer />
   </main>
 </Layout>
