fix update image bug

--- a/src/components/CanvasSignature.astro
+++ b/src/components/CanvasSignature.astro
@@ -228,6 +228,8 @@ import { Image } from "astro:assets";
             DibujoInicial(ctx, imagen);
           };
         };
+        const nombreImagen = `imagen_${Date.now()}`;
+        subirArchivoInput.setAttribute("name", nombreImagen);
 
         lector.readAsDataURL(archivo);
       }
