--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -142,6 +142,8 @@ import { Image } from "astro:assets";
             DibujoInicial(ctx, imagen);
           };
         };
+        const nombreImagen = `imagen_${Date.now()}`;
+        subirArchivoInput.setAttribute("name", nombreImagen);
 
         lector.readAsDataURL(archivo);
       }
