--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -8,7 +8,7 @@ import { Image } from "astro:assets";
 <section class="flex w-full flex-col items-center justify-center gap-8">
   <h1 class="text-3xl font-bold">Comienza a dibujar</h1>
 
-  <div class="flex flex-col items-center justify-center gap-[90px] md:flex-col">
+  <div class="flex flex-col items-center justify-center gap-[90px] md:flex-row">
     <div class="grid w-full gap-8">
       <div class="flex w-full flex-col gap-3">
         <h2 class="text-xl font-bold text-red-600">
