add new section example

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -16,9 +16,9 @@
           Fácil de usar
         </h4>
         <p class="p-4 opacity-80">
-          Esta aplicación intuitiva te permite cargar una imagen de tu casa,
-          completar fácilmente los campos con tus preferencias y descarga tu
-          diseño. Sin pasos complicados!
+          Esta aplicación intuitiva te permite cargar una imagen, completar
+          fácilmente los campos con tus preferencias y descarga tu diseño. Sin
+          pasos complicados!
         </p>
       </div>
     </li>
@@ -31,12 +31,12 @@
         <h4
           class="flex w-full justify-center rounded-t-lg border-black bg-rose-400 py-4 text-lg font-bold"
         >
-          Añade tu casa
+          Rápido
         </h4>
         <p class="p-4 opacity-80">
-          Crea una imagen que muestre tu casa para que la tengan de referencia,
-          evita describir tu casa cada vez que te llamen, muestra todas las
-          peculiaridades con una foto.
+          No es necesario registrarse como usuario. Simplemente elige la
+          plantilla, crea la imagen según tus necesidades y descárgala sin
+          demoras.
         </p>
       </div>
     </li>
