--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
 import Footer from "../components/Footer.astro";
+import Examples from "../components/Examples.astro";
 ---
 
 <Layout title="DoggyDomDrawer">
@@ -12,6 +13,7 @@ import Footer from "../components/Footer.astro";
   <main class="flex flex-col gap-20 px-10">
     <Hero />
     <Features />
+    <Examples />
   </main>
   <Footer />
 </Layout>
