--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -15,24 +15,24 @@ import { Image } from "astro:assets";
           PASO 1: Completa los campos
         </h2>
         <InputText
-          label="Título:"
-          placeholder="Ingresar el nuevo texto"
+          label="Título"
+          placeholder="Ingresar un título"
           id="textoInput"
         />
         <InputText
-          label="Dirección:"
-          placeholder="Ingresar el nuevo texto"
+          label="Dirección"
+          placeholder="Ingresa una dirección"
           id="textoInput1"
         />
         <InputText
-          label="Distrito, Ciudad:"
-          placeholder="Ingresar el nuevo texto"
+          label="Distrito, Ciudad"
+          placeholder="Ingresa el distrito, ciudad"
           id="textoInput2"
         />
 
         <InputText
-          label="Mensaje:"
-          placeholder="Ingresar el nuevo texto"
+          label="Mensaje"
+          placeholder="Ingresa un mensaje"
           id="textoInput3"
         />
 
