--- a/src/components/CanvasSignature.astro
+++ b/src/components/CanvasSignature.astro
@@ -15,38 +15,34 @@ import { Image } from "astro:assets";
           PASO 1: Completa los campos
         </h2>
         <InputText
-          label="Nombre y Apellidos:"
-          placeholder="Ingresar el nuevo texto"
+          label="Nombre y Apellidos"
+          placeholder="Ingresa nombre completo"
           id="textoInput"
         />
         <InputText
-          label="Rol:"
-          placeholder="Ingresar el nuevo texto"
+          label="Rol"
+          placeholder="Ingresar un nuevo rol"
           id="textoInput1"
         />
 
         <InputText
           label="Dirección"
-          placeholder="Ingresar el nuevo texto"
+          placeholder="Ingresar una dirección"
           id="textoInput2"
         />
         <InputText
           label="Teléfono"
-          placeholder="Ingresar el nuevo texto"
+          placeholder="Ingresar teléfono"
           id="textoInput3"
         />
 
         <InputText
-          label="Correo:"
-          placeholder="Ingresar el nuevo texto"
+          label="Correo"
+          placeholder="Ingresa correo"
           id="textoInput4"
         />
 
-        <InputText
-          label="Web:"
-          placeholder="Ingresar el nuevo texto"
-          id="textoInput5"
-        />
+        <InputText label="Web" placeholder="Ingresar tu Web" id="textoInput5" />
 
         <button
           class="mt-3 border-2 border-black bg-slate-300 px-4 py-2 font-bold shadow-[4px_4px_0px_rgba(0,0,0,1)] focus:bg-rose-300 focus:outline-none"
