--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -17,7 +17,7 @@
         </h4>
         <p class="p-4 opacity-80">
           Esta aplicación intuitiva te permite cargar una imagen, completar
-          fácilmente los campos con tus preferencias y descarga tu diseño. Sin
+          fácilmente los campos con tus preferencias y descargar tu diseño. ¡Sin
           pasos complicados!
         </p>
       </div>
@@ -52,8 +52,8 @@
           Mensajes divertidos
         </h4>
         <p class="p-4 opacity-80">
-          Coloca un mensaje, titulo, referencia, identiticador, emoticonos para
-          que tu mapa sea unico 🎉🎈🎉.
+          Coloca un mensaje, título, referencia, identiticador, emoticonos para
+          que tu mapa sea único 🎉🎈🎉.
         </p>
       </div>
     </li>
